[project]
name = "smjv-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipython>=9.13.0",
    "numpy>=2",
    "python-dotenv>=1.2.2",
    "robosuite",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
robosuite = { git = "https://github.com/ARISE-Initiative/robosuite.git", rev = "95743f6" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
