[project]
name = "smjv-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mujoco>=3",
    "msgpack>=1.0",
    "simpub",
    "websockets>=13",
]

[project.optional-dependencies]
simulation = [
    "numpy>=2",
    "robosuite",
    "scipy",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
robosuite = { git = "https://github.com/ARISE-Initiative/robosuite.git", rev = "95743f6" }
simpub = { git = "https://github.com/intuitive-robots/SimPublisher.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
